objects/Actions__c.object
<CustomObject>
    <description>R5 - Actions related to Account Plan</description>
    <fields>
        <fullName>ABB_Value_or_Offering__c</fullName>
        <description>R5 - ABB Value or Offering</description>
        <inlineHelpText>ABB&apos;s solution or value add to the particular Customer Need</inlineHelpText>
        <label>ABB Value or Offering</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year_Date_Format__c</fullName>
        <formula>Account_Plan__r.Account_Plan_Year_Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Year (Date Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship between Account Plan and Actions</description>
        <inlineHelpText>Description of the Account Plan  such that other users can understand the scope.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Analysis and Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>R5 - Action</description>
        <inlineHelpText>Enter concise description of Action to be Taken</inlineHelpText>
        <label>Action List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actions_Comments__c</fullName>
        <description>SFDC 4504 - Account Analysis and Actions enhancement.</description>
        <inlineHelpText>Free text to add notes</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>R5 - Actual End Date</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with the User</description>
        <inlineHelpText>Select the User from Drop Down List</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_and_Technical_Issues__c</fullName>
        <description>R5 - Business and Technical Issues</description>
        <inlineHelpText>The Business and/or Technical issue that the customer is facing</inlineHelpText>
        <label>Business and Technical Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Need__c</fullName>
        <description>R5 - Customer Need</description>
        <inlineHelpText>The need or problem the customer is facing</inlineHelpText>
        <label>Customer Need</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>R5 - Date of Completion when the Status is changed to Completed.</description>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Issues__c</fullName>
        <description>R5 - NPS Issues</description>
        <inlineHelpText>The customer issue as per the NPS Process</inlineHelpText>
        <label>NPS Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>R5 - Opportunities</description>
        <inlineHelpText>Describe the customers&apos; opportunities</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>R5 - Planned End Date</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>R5 - Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Select the status of the associated action</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>R5 - Strengths</description>
        <inlineHelpText>Describe the customers&apos; strengths</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>R5 - Threats</description>
        <inlineHelpText>Describe the customer&apos;s threats</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>R5 - Weaknesses</description>
        <inlineHelpText>Describe the customers weaknesses</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>R5 - Year</description>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Analysis and Actions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Analysis and Actions</pluralLabel>
    <recordTypes>
        <fullName>Customer_Business_Initiatives</fullName>
        <active>true</active>
        <description>Define Account business initiatives to increase their own Market share or penetrate new market</description>
        <label>3. Account Business Initiatives</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Needs</fullName>
        <active>true</active>
        <description>Define specific Account needs</description>
        <label>2. Account Needs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expansion</fullName>
        <active>true</active>
        <description>ABB actions to support Expansion strategies for the account</description>
        <label>9. Expansion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Innovation</fullName>
        <active>true</active>
        <description>ABB actions to support Innovation strategies for the account</description>
        <label>8. Innovation</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPS</fullName>
        <active>true</active>
        <description>Net Promoter Score feedbacks from the Account</description>
        <label>6. NPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Penetration</fullName>
        <active>true</active>
        <description>ABB Actions to support Penetration strategies for the account</description>
        <label>7. Penetration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SWOT_Analysis_External</fullName>
        <active>true</active>
        <description>SWOT Analysis of Account against its own Market</description>
        <label>1. Account SWOT Analysis</label>
    </recordTypes>
    <recordTypes>
        <fullName>SWOT_Analysis_Internal</fullName>
        <active>true</active>
        <description>SWOT Analysis ABB against the Account</description>
        <label>5. ABB SWOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>SWOT_Analysis_of_Competitor</fullName>
        <active>true</active>
        <description>SWOT Analysis of Competitor against the Account</description>
        <label>4. SWOT Analysis of Competitor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actions_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Actions.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(CreatedDate),
Due_Date__c &lt;  TODAY(), 
Due_Date__c &lt;  DateValue(CreatedDate)
)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>It is not allowed to put there date which is in past in comparision to Created Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_comparision</fullName>
        <active>true</active>
        <description>R5</description>
        <errorConditionFormula>IF ( TEXT(Year__c) != NULL &amp;&amp; TEXT(Account_Plan__r.Account_Plan_Year__c) != NULL, VALUE(TEXT(Year__c)) &lt; (VALUE(TEXT(Account_Plan__r.Account_Plan_Year__c))-3), FALSE)</errorConditionFormula>
        <errorMessage>Year must be either greater than Account Plan Year or past three years from Account Plan Year</errorMessage>
    </validationRules>
</CustomObject>